--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint"
   },
   "keywords": [],
   "type": "module",
@@ -20,13 +22,19 @@
     "@tanstack/react-query-devtools": "^5.59.13",
     "@tanstack/router-devtools": "^1.65.0",
     "@tanstack/router-plugin": "^1.65.0",
+    "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
+    "happy-dom": "^15.7.4",
     "prettier": "^3.4.2",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^2.1.3",
+    "vitest-fetch-mock": "^0.3.0"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.13",
